# rocket_sample

./: .env  Cargo.toml  Rocket.toml  diesel.toml
migrations/2024-11-13-164240_create_people/: up.sql
src/: errors.rs  main.rs  people.rs
src/db/: mod.rs  models.rs  schema.rs
