[package]
name = "rocket_sample"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
chrono = { version = "0.4.38", features = ["serde"] }
diesel = { version = "2.2.4", features = ["chrono", "postgres", "r2d2"] }
dotenvy = "0.15.7"
jsonschema = "0.26.1"
rocket = { version = "0.5.1", features = ["json"] }
rocket_sync_db_pools = { version = "0.1.0", features = [
  "diesel_postgres_pool",
] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
